--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img class="banner-img 1" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img class="banner-img 2" src="./assets/images/slideshow/slide2.jpg" alt="Banner Print-it">
+		<img class="banner-img 3" src="./assets/images/slideshow/slide3.jpg" alt="Banner Print-it">
+		<img class="banner-img 4" src="./assets/images/slideshow/slide4.png" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="Précédent">
+		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="Suivant">
 		<div class="dots">
 		</div>
 	</div>
